# ml-practice

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  rs_ci.yaml
python/ml_practice/_lowlevel/: __init__.pyi
python/ml_practice/kmeans/: __init__.py  numpy_py.py
python/ml_practice/linreg/: __init__.py  native_py.py  numpy_py.py
src/: kmeans.rs  lib.rs  linreg.rs  utils.rs
src/ml_practice/: __init__.py
tests/: test_linreg.py
